# sdl2-template

./: CMakeLists.txt  README.md  main.cpp
